clusters/staging/addons/storage/longhorn/ingress-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: staging.internal.javiersant.com
    gethomepage.dev/href: "https://longhorn.staging.internal.javiersant.com"
spec:
  routes:
    - match: Host(`longhorn.staging.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
